RESOLVED FIXED 101580
[Qt] deleteAllCookies() SQL statement is incorrect SQL
https://bugs.webkit.org/show_bug.cgi?id=101580
Summary [Qt] deleteAllCookies() SQL statement is incorrect SQL
Antti Harju
Reported 2012-11-08 03:30:06 PST
"DELETE * FROM cookies" should be "DELETE FROM cookies" I'll post a patch.
Attachments
Patch (1.12 KB, patch)
2012-11-08 03:44 PST, Antti Harju
jturcotte: review+
webkit.review.bot: commit-queue-
Antti Harju
Comment 1 2012-11-08 03:44:17 PST
Allan Sandfeld Jensen
Comment 2 2012-12-03 06:54:23 PST
Comment on attachment 172997 [details] Patch That looks right to me.
Allan Sandfeld Jensen
Comment 3 2012-12-03 07:04:19 PST
(In reply to comment #2) > (From update of attachment 172997 [details]) > That looks right to me. Perhaps set r? on your patch?
Jocelyn Turcotte
Comment 4 2012-12-12 07:39:27 PST
Comment on attachment 172997 [details] Patch Overall comments
WebKit Review Bot
Comment 5 2012-12-12 07:44:20 PST
Comment on attachment 172997 [details] Patch Rejecting attachment 172997 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: exit_code: 1 cwd: /mnt/git/webkit-commit-queue Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/qt/CookieJarQt.cpp Hunk #1 FAILED at 242. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/platform/qt/CookieJarQt.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Jocelyn Tu..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output: http://queues.webkit.org/results/15272790
Jocelyn Turcotte
Comment 6 2012-12-12 07:58:14 PST
Please rebase the patch, it seems like the code moved to Source/WebCore/platform/network/qt/CookieJarQt.cpp.
Allan Sandfeld Jensen
Comment 7 2012-12-13 02:28:46 PST
Note You need to log in before you can comment on or make changes to this bug.