[Qt] Fix deleteAllCookies() invalid SQL statement https://bugs.webkit.org/show_bug.cgi?id=101580

Patch by Antti Harju <antti.harju@ixonos.com> on 2012-12-13
Reviewed by Jocelyn Turcotte.

* platform/network/qt/CookieJarQt.cpp:
(WebCore::SharedCookieJarQt::deleteAllCookies):

Canonical link: https://commits.webkit.org/123123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137578 268f45cc-cd09-0410-ab3c-d52691b4dbfc